objects/ssot__CommunicationSubscription__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataUsePurposeId__c</fullName>
        <label>Data Use Purpose Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Communication Subscription Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761157362_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CommunicationSubscription_DataUsePur_rel</label>
        <referenceTo>ssot__DataUsePurpose__dlm</referenceTo>
        <relationshipLabel>CommunicationSubscription_DataUsePur_rel</relationshipLabel>
        <relationshipName>rel_1697761157362_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761165483_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DataUsePurpose_Id_map_CommunicationS_rel</label>
        <referenceTo>ssot__DataUsePurpose__dlm</referenceTo>
        <relationshipLabel>DataUsePurpose_Id_map_CommunicationS_rel</relationshipLabel>
        <relationshipName>rel_1697761165483_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>